--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-index.html of olzaragoza/test/index.html that purposely conflicts with olzaragza/olzaragoza.github.io/test/index.html
+index.html of olzaragoza/test/index.html that purposely conflicts with olzaragoza/olzaragoza.github.io/test/index.html
